# grevia

./: README.md  jest.config.js  next.config.ts  package-lock.json  package.json  vercel.json
api/: .dockerignore  alembic.ini  main.py  pyproject.toml  requirements.txt  verify_warehouse.py
api/agents/: __init__.py  emissions_agent.py  materiality_agent.py  policy_agent.py  state.py
api/agents/esrs/: __init__.py  base.py  environment_agent.py  graph.py  guardrails.py  social_agent.py
api/helpers/: __init__.py  auth.py  storage.py
api/helpers/data_warehouse/: google_drive.py  onedrive.py  s3.py
api/helpers/data_warehouse/models/: models.py
api/models/: __init__.py  company.py  emission_record.py  hot_store.py  materiality_assessment_breakdown.py  policy_action.py  policy_item.py  workspace.py
api/my_agents/: assistant_agent.py  tools.py
api/my_agents/esrs/: base.py  environment_agent.py  governance_agent.py  graph.py  guardrails.py  social_agent.py  tools.py
api/prompts/: double-materiality-assessor.txt
api/rag/: __init__.py  embeddings.py  guardrails.py  t02_bm25_retrieval.py  t04_query_expansion.py  t05_reranking.py  t06_metadata_filtering.py  t09_step_back_prompting.py  t11_multi_query.py  t12_rag_fusion.py  t13_self_rag.py  types.py
api/routers/: assistant.py  emissions.py  hot_store.py  materiality.py
api/schemas/: emissions.py  workspace.py
api/tests/: conftest.py  test_extract_text.py  test_guardrails.py  test_helpers_auth.py  test_router_auth.py  test_router_emissions.py  test_router_hot_store.py  test_router_policy.py  test_schemas.py
(+118 files in other folders)
